# AoC24

./: pyproject.toml
day1/: day1.py
